updated Japanese translation

--- a/po/wesnoth-ai/ja.po
+++ b/po/wesnoth-ai/ja.po
@@ -1,12 +1,13 @@
 # Translators:
 # RatArmy <broadbarredfirefish@gmail.com>, 2018
 # 堀 秀幸 <Hide.HORI@gmail.com>, 2018
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-09-09 08:38 UTC\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2018-05-06 10:21+0000\n"
 "Last-Translator: 堀 秀幸 <Hide.HORI@gmail.com>, 2018\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
