--- a/po/wesnoth-dm/ja.po
+++ b/po/wesnoth-dm/ja.po
@@ -1,13 +1,15 @@
 # Translators:
 # RatArmy <broadbarredfirefish@gmail.com>, 2018
+# suto3, 2018
 # 堀 秀幸 <Hide.HORI@gmail.com>, 2018
 # 家庭的の人 <kateitekino_hito@yahoo.co.jp>, 2018
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 18:29 UTC\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2018-09-12 07:29+0000\n"
 "Last-Translator: 家庭的の人 <kateitekino_hito@yahoo.co.jp>, 2018\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
@@ -75,7 +77,7 @@ msgstr ""
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:37
 msgid "(Intermediate level, 19 scenarios.)"
-msgstr "（中級者レベル、19 シナリオ）"
+msgstr "（中級レベル、19 シナリオ）"
 
 #. [about]
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:40
@@ -5072,11 +5074,11 @@ msgid ""
 "greatest mage ever to grace the courts of Wesnoth."
 msgstr ""
 "その後、Delfador は残りの人生を新しい支配者の顧問として過ごしました。Alduin "
-"の Great Academy が過去の栄光を取り戻せるよう、心を砕きました。けれどもこの努"
-"力は彼の生涯においては殆ど実を結びませんでした。なぜなら何年もの戦争と対立を"
-"通じ、魔術師が極めて少数しか生き残らず、そして彼らのいずれも力と技能において "
-"Delfador には及ばなかったからです。 Wesnoth の宮廷を飾った魔術師のうち、それ"
-"までで最も偉大なる魔術師であった Delfador には。"
+"の魔術師アカデミーが過去の栄光を取り戻せるよう、心を砕きました。けれどもこの"
+"努力は彼の生涯においては殆ど実を結びませんでした。なぜなら何年もの戦争と対立"
+"を通じ、魔術師が極めて少数しか生き残らず、そして彼らのいずれも力と技能におい"
+"て Delfador には及ばなかったからです。 Wesnoth の宮廷を飾った魔術師のうち、そ"
+"れまでで最も偉大なる魔術師であった Delfador には。"
 
 #. [unit_type]: id=Journeyman Mage
 #: data/campaigns/Delfadors_Memoirs/units/Journeyman_Mage.cfg:7
