--- a/po/wesnoth-sof/ja.po
+++ b/po/wesnoth-sof/ja.po
@@ -1,12 +1,13 @@
 # Translators:
-# RatArmy <broadbarredfirefish@gmail.com>, 2018
+# RatArmy <broadbarredfirefish@gmail.com>, 2019
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2018\n"
+"PO-Revision-Date: 2018-09-12 07:30+0000\n"
+"Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -81,10 +82,8 @@ msgstr ""
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:34
-#, fuzzy
-#| msgid "(Expert level, 9 scenarios.)"
 msgid "(Hard level, 9 scenarios.)"
-msgstr "（上級者レベル、9シナリオ）"
+msgstr "（上級レベル、9 シナリオ）"
 
 #. [about]
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:39
@@ -1208,22 +1207,12 @@ msgstr "モンスター"
 
 #. [part]
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:40
-#, fuzzy
-#| msgid ""
-#| "The journey to the far northern wastelands was long and perilous. For the "
-#| "tunnels were winding and treacherous, and the paths were not safe from "
-#| "orcs, or worse. Nevertheless, they did reach the northlands, and began to "
-#| "search for the runesmith named Thursagan — the sage of fire."
 msgid ""
 "The journey to the far northern wastelands was long and perilous. For the "
 "tunnels were winding and treacherous, and the paths were not safe from orcs, "
 "or worse. Nevertheless, they did reach the Northlands, and began to search "
 "for the runesmith named Thursagan — the sage of fire."
 msgstr ""
-"彼らが北の荒れ地に着くまでの旅は、長くて危険でした。その間のトンネルは曲がり"
-"くねり、足場は不安定でした。そして、道程はオーク達や、もっと悪いものによって"
-"安全ではありませんでした。それでもなんとか、彼らは北の大地に到着し、ルーンの"
-"鍛冶職人にして炎の賢者、Thursaganを探し始めました。"
 
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:98
@@ -1300,16 +1289,10 @@ msgstr ""
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:224
-#, fuzzy
-#| msgid ""
-#| "Except for trolls and ogres, right? They live in the far northlands. "
-#| "They’re probably lurking around here somewhere."
 msgid ""
 "Except for trolls and ogres, right? They live in the far Northlands. They’re "
 "probably lurking around here somewhere."
 msgstr ""
-"トロルやオーガ達を除いて、ですね？ 彼らは北の果ての地に住みます。そこらに潜ん"
-"でいるかもしれません。"
 
 #. [message]: speaker=Baglur
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:228
@@ -1537,11 +1520,8 @@ msgstr ""
 
 #. [message]: speaker=Baglur
 #: data/campaigns/Sceptre_of_Fire/scenarios/3t_The_Council_Regathers.cfg:135
-#, fuzzy
-#| msgid "Yes, we did. And that is Krawg, who helped us in the northlands."
 msgid "Yes, we did. And that is Krawg, who helped us in the Northlands."
 msgstr ""
-"そうです、やり遂げました。そして彼はKrawg、北の大地で助けてくれました。"
 
 #. [message]: speaker=Krawg
 #. "Yeah! Me Krawg!"
@@ -2141,11 +2121,8 @@ msgstr "Shorbearクランの指導者、Glonoinを破る"
 
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:155
-#, fuzzy
-#| msgid ""
-#| "Have all heroes in the Shorbear caves while no enemies are in the caves"
 msgid "Have all heroes, and no enemies, in the Shorbear caves"
-msgstr "全員Shorbearの洞窟に入り、全ての敵を締め出す"
+msgstr ""
 
 #. [objective]: condition=lose
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:178
@@ -3015,34 +2992,20 @@ msgstr "そこを行くのは誰です？"
 #. [message]: speaker=Alanin
 #. dragoon = his unit type
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:565
-#, fuzzy
-#| msgid ""
-#| "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a "
-#| "mission in the northlands, and now elvish horsemen are chasing me. I "
-#| "barely evaded them."
 msgid ""
 "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a mission "
 "in the Northlands, and now elvish horsemen are chasing me. I barely evaded "
 "them."
 msgstr ""
-"私は竜騎兵で、Haldric II世のボディーガードです。北の大地での任務に送られ、今"
-"やエルフの騎兵が私を追ってきます。彼らから逃れられそうもありません。"
 
 #. [message]: speaker=Alanin
 #. cavalier = his unit type
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:572
-#, fuzzy
-#| msgid ""
-#| "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a "
-#| "mission in the northlands, and now elvish horsemen are chasing me. I "
-#| "barely evaded them."
 msgid ""
 "I’m a cavalier, with Haldric II’s personal bodyguard. I was sent on a "
 "mission in the Northlands, and now elvish horsemen are chasing me. I barely "
 "evaded them."
 msgstr ""
-"私は竜騎兵で、Haldric II世のボディーガードです。北の大地での任務に送られ、今"
-"やエルフの騎兵が私を追ってきます。彼らから逃れられそうもありません。"
 
 #. [message]: speaker=Hadlin  # wmllint: ignore
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:578
@@ -3566,16 +3529,10 @@ msgstr "止まれ！ Wesnothの首都、Weldynへ何の用だ？"
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:103
-#, fuzzy
-#| msgid ""
-#| "Stand aside. I am Alanin, of Haldric’s royal guard, and I bring news from "
-#| "the northlands."
 msgid ""
 "Stand aside. I am Alanin, of Haldric’s royal guard, and I bring news from "
 "the Northlands."
 msgstr ""
-"どいてください。私はAlanin、Haldric王の近衛兵です。そして私は北の大地からの知"
-"らせを持っています。"
 
 #. [message]: speaker=Gatekeeper
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:107
@@ -3604,16 +3561,10 @@ msgstr "入れ、Alanin。そして王に申し上げるが良い。"
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:126
-#, fuzzy
-#| msgid ""
-#| "My King, fifteen years ago you sent me on a mission into the northlands. "
-#| "I have returned. What do you wish to know of my mission?"
 msgid ""
 "My King, fifteen years ago you sent me on a mission into the Northlands. I "
 "have returned. What do you wish to know of my mission?"
 msgstr ""
-"国王様、15年前、上様は私を北の大地の任務へ送られました。そして只今戻って参り"
-"ました。まず何をお知りになりたいでしょうか？"
 
 #. [message]: speaker=Haldric II
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:130
@@ -3858,6 +3809,3 @@ msgstr "アァァ……。"
 #: data/campaigns/Sceptre_of_Fire/utils/utils.cfg:71
 msgid "Kraa..."
 msgstr "クァァ……。"
-
-#~ msgid "Kawn"
-#~ msgstr "Kawn"
