--- a/po/wesnoth-units/ja.po
+++ b/po/wesnoth-units/ja.po
@@ -1,13 +1,15 @@
 # Translators:
 # IWAI, Masaharu <iwaim.sub@gmail.com>, 2018
 # RatArmy <broadbarredfirefish@gmail.com>, 2018
+# 堀 秀幸 <Hide.HORI@gmail.com>, 2019
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2018\n"
+"PO-Revision-Date: 2018-05-06 10:22+0000\n"
+"Last-Translator: 堀 秀幸 <Hide.HORI@gmail.com>, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -2120,6 +2122,17 @@ msgid ""
 "Elvish archers are still effective combatants, especially when fighting from "
 "the safety of their forests."
 msgstr ""
+"エルフの射手（Elvish Archer）\n"
+"\n"
+"エルフ族は元来、狩猟採集生活者です。そのため、ほとんどの者が幼少期から弓術を"
+"学び始め、射手として一人前になることを目指します。彼らにとって弓術は、実用的"
+"なスキルであるばかりではなく、一般的な娯楽でもあり、多くの競技会が開催されま"
+"す。競技会では、出場者が技を競うことを楽しみ、同時に観客を楽しませます。ま"
+"た、弓術は直ちに戦闘に使える能力であることから、戦時においては、多くのエルフ"
+"が武器として弓を握る選択をします。人間族の弓兵（Bowman）やオークの弓兵"
+"（Orcish Archer）と比較すると、頑強さでは劣りますが、それでもなお、エルフの射"
+"手（Elvish Archer）は有能な戦闘員であり、特に森の加護を受けて戦う場合は、その"
+"能力を遺憾なく発揮します。"
 
 #. [female]
 #: data/core/units/elves/Archer.cfg:80
@@ -2155,6 +2168,23 @@ msgid ""
 "very little room for counterattack and customarily results in crushing "
 "defeat."
 msgstr ""
+"エルフの復讐者（Elvish Avenger）\n"
+"\n"
+"この興味深い名前は、熟練のレンジャー（ranger）である彼らがしばしば採用する戦"
+"術に由来します。彼らはまず、防衛戦を突破されたように見せかけて敵を誘い込みま"
+"す。そして、背後に控える脆弱な部隊を急襲して、補給線を断ち、敵を包囲して致命"
+"的な一撃を与えます。これは時折、それまでの戦闘で犠牲になった同志のための報復"
+"のような形になるため、復讐者（Avenger）という呼称は、当たらずといえども遠から"
+"ずと言えるでしょう。\n"
+"\n"
+"他のエルフもさることながら、樹上の生き物と生活をともにし、森の神秘を学ぶ彼ら"
+"復讐者（Avenger）は、森を構成する要素のひとつであると言えるでしょう。自然の守"
+"護者として、彼らは森の境界を越えてでも探索活動をする傾向があり、山岳地帯や砂"
+"漠といった起伏に富んだ地形にも熟達しています。復讐者（Avenger）はただでさえ強"
+"力な戦闘員ですが、森の中に潜めば、ほとんど反撃の機会を与えずに敵を狙撃する能"
+"力を有します。侵略軍はすべからく反撃の余地さえ与えられずに大敗を喫することに"
+"なり、その痕跡さえもほとんど残さない相手との戦いに対する恐怖心を植え付けられ"
+"ます。"
 
 #. [female]
 #: data/core/units/elves/Avenger.cfg:95
@@ -2178,6 +2208,15 @@ msgid ""
 "often observed to lead through camaraderie and amicability, but still "
 "command great respect from their kin."
 msgstr ""
+"エルフの隊長（Elvish Captain）\n"
+"\n"
+"エルフの隊長は通常、偵察隊を率いて、エルフの支配領域にある広大な森林の哨戒を"
+"指揮します。大規模な戦闘を好む他の種族のリーダーと異なり、ほとんどの場合、小"
+"規模な戦闘に対処する際にその力量を発揮し、特に防御的な戦術に優れています。一"
+"般的にエルフの隊長（Elvish Captain）は、自身の指揮下にある小隊と長時間をとも"
+"に過ごし、隊員たちの個人的な助言者、あるいは友人としての役割も果たします。し"
+"ばしば仲間意識や友情を通して部隊を率いているケースが見られますが、それでもな"
+"お、一族から多大な信頼を得ています。"
 
 #. [unit_type]: id=Elvish Champion, race=elf
 #: data/core/units/elves/Champion.cfg:4
@@ -2197,6 +2236,16 @@ msgid ""
 "their whole lives refining their prowess with the blade, these elves are "
 "exceptionally dangerous and should never be underestimated."
 msgstr ""
+"エルフのチャンピオン（Elvish Champion）\n"
+"\n"
+"エルフ族は一般的に生来の平和主義者で、進んで攻撃を仕掛けることはほとんどな"
+"く、攻撃するのは、悪意を持った敵襲に対する反撃に限られます。しかしながら、闘"
+"いを好むエルフも存在し、そのようなエルフは楽しむことを目的に（あるいは目的も"
+"なく）戦闘を探し求めます。彼らは戦場を支配するための剣術を磨くことに人生を捧"
+"げ、そのほとんどは当然ながら短命に終わります。一握りの最も才能に恵まれた者た"
+"ちだけが、絶え間ない戦闘を生き抜き、「チャンピオン（Champion）」の称号を得ら"
+"れます。彼らは刃による武勇に磨きをかけることに生涯を費やすため、並外れて危険"
+"な存在であり、決して侮るべきではありません。"
 
 #. [unit_type]: id=Elvish Druid, race=elf
 #: data/core/units/elves/Druid.cfg:4
@@ -2264,6 +2313,14 @@ msgid ""
 "react and counter. Most elves can learn the basics of swordplay relatively "
 "quickly and will readily pick up the blade when confronted with battle."
 msgstr ""
+"エルフの戦士（Elvish Fighter）\n"
+"\n"
+"エルフ族で剣術の訓練に励むのは、主に森林の警備隊（rangers）や境界の哨戒隊"
+"（border patrols）です。彼らの主任務は森林の守護であり、ごく稀には、小隊を編"
+"制して他の領域への侵入も行います。エルフの剣術は、速さを活かした一撃離脱戦術"
+"を旨とするため、力では人間族やオークの戦士には劣りますが、相手に反撃の猶予を"
+"与えにくいのが特長です。ほとんどのエルフは比較的短時間で剣術の基礎を習得する"
+"ことが可能で、戦闘に際してはすぐに剣を携える準備が整います。"
 
 #. [unit_type]: id=Elvish Hero, race=elf
 #: data/core/units/elves/Hero.cfg:4
@@ -6429,198 +6486,3 @@ msgstr ""
 "\n"
 "ウーズは全く戦いを好みませんが怪力を持っています。しかしながら、動き回ったり"
 "することに慣れておらず、素早くもできません。"
-
-#~ msgid ""
-#~ "Elves have always had a reputation for archery, a skill that, for many "
-#~ "reasons, comes naturally to them. Even the frail of body can be deadly "
-#~ "with a bow in hand, and in times of war, many will take up this weapon. "
-#~ "Though their relative inexperience with combat leaves them somewhat "
-#~ "vulnerable, their natural grace ensures that they can best any of "
-#~ "humanity’s fresh recruits."
-#~ msgstr ""
-#~ "エルフの射手（Elvish Archer）\n"
-#~ "\n"
-#~ "エルフの弓術は常に定評があり、この能力は多くの理由によって生まれつき備わっ"
-#~ "ています。か弱い肉体であっても弓を手にすれば恐しい存在になり、戦時には多く"
-#~ "がこの武器を装備します。比較的戦闘に未経験なためいくぶん弱味にはなります"
-#~ "が、彼ら生来の優雅さがどんな人間の新米も敵わないことを明確にします。"
-
-#~ msgid ""
-#~ "The curious name of the elvish ‘Avengers’ comes from a tactic often "
-#~ "employed by these master rangers. The enemy is allowed to break through a "
-#~ "feint defense, and when the vulnerable troops behind the front line "
-#~ "follow, these archers break cover and attack, cutting the supply lines "
-#~ "and surrounding the enemy in one fell stroke.\n"
-#~ "\n"
-#~ "This has, at times, been interpreted as a form of vengeance for their "
-#~ "brethren lost earlier in the battle. Although not so base in design, it "
-#~ "is not at all inaccurate."
-#~ msgstr ""
-#~ "エルフの復讐者（Elvish Avenger）\n"
-#~ "\n"
-#~ "エルフの「復讐者」という奇妙な名前は、この熟練レンジャーによってしばしば使"
-#~ "用されてきた戦術に由来します。敵が見せかけの防御を攻め越えることに成功し"
-#~ "て、前線の背後に続く軍隊が隙を見せた時に、この射手は姿を現して、供給ライン"
-#~ "を引き裂いて、身動きできなくなった敵を取り囲んで攻撃します。\n"
-#~ "\n"
-#~ "これは、戦闘の始まりに失われた彼らの仲間への復讐の形だとして解釈されること"
-#~ "もありました。そのように基から計画されたわけではありませんが、必ずしも間違"
-#~ "いではありません。"
-
-#~ msgid ""
-#~ "Elves, unlike many other races, will quickly acknowledge and follow any "
-#~ "of their peers who have experience in combat. In this they differ greatly "
-#~ "from humanity, for whom leadership is often a matter of coercion and "
-#~ "intimidation. The combination of their willingness to accept the wisdom "
-#~ "of their leaders, and the tendency to choose leaders of merit is one of "
-#~ "the quiet strengths of the elves."
-#~ msgstr ""
-#~ "エルフの隊長（Elvish Captain）\n"
-#~ "\n"
-#~ "エルフは他の多くの種族と違って、戦いの経験のある同輩をすぐに認めて、従いま"
-#~ "す。これは、威圧と威嚇がもたらす、不安定なまがい物として統率力がなりたって"
-#~ "いる人間族にとってはたいへん奇妙に感じます。そのリーダーの知恵を進んで受け"
-#~ "入れる意思と、実力あるリーダーを選ぶ傾向の組み合わせこそエルフの静かなる力"
-#~ "の一つです。"
-
-#~ msgid ""
-#~ "Those few elves who deliberately hone themselves into weapons of war "
-#~ "become something which belies the peace-loving reputation of their race. "
-#~ "Dedication and skill are matched with purity of form, and the result is "
-#~ "swordsmanship to which few can compare. Even their archery, treated as a "
-#~ "secondary pursuit, is masterfully executed."
-#~ msgstr ""
-#~ "エルフのチャンピオン（Elvish Champion）\n"
-#~ "\n"
-#~ "自身を戦争の武器として慎重に磨き上げてきたこの数少ないエルフは、平和主義と"
-#~ "して知られているエルフ族の評判を裏切るものでもあります。その献身と技能は形"
-#~ "式の純正さに見合い、結果としてわずかなものしか匹敵できない剣術の達人となり"
-#~ "ます。剣術ほど重視して鍛えていない弓術でさえも、達人並みに習得しています。"
-
-#~ msgid ""
-#~ "Elves are not warlike by nature, but in times of need, their natural "
-#~ "grace and agility serve them well, as does their skillful craftsmanship. "
-#~ "An elf can grasp the basics of swordsmanship and archery in a time "
-#~ "uncannily short by the standards of other races, and put them to "
-#~ "effective use on the battlefield."
-#~ msgstr ""
-#~ "エルフの戦士（Elvish Fighter）\n"
-#~ "\n"
-#~ "エルフは生来好戦的ではありませんが、必要な時になれば、彼らの生来の優雅さと"
-#~ "俊敏さが熟練の職人芸とともにとても役立ちます。エルフは剣術と弓術の基本を他"
-#~ "の種族の基準からすると超人的に短時間でつかみとり、戦場において効果的に使用"
-#~ "することができます。"
-
-#~ msgid ""
-#~ "Elves, though not warlike by nature, are swift to learn; a relatively "
-#~ "small amount of experience will turn an elf from a competent fighter into "
-#~ "a master of combat. Those who are honored as heroes are strong with both "
-#~ "sword and bow, and their skill once acquired does not fade for lack of "
-#~ "practice."
-#~ msgstr ""
-#~ "エルフの英雄（Elvish Hero）\n"
-#~ "\n"
-#~ "エルフ族は生来好戦的ではありません。しかし、その学習能力には目を見張るもの"
-#~ "があります。エルフ族は比較的少ない経験で、有能な戦士から戦闘の達人になるこ"
-#~ "とができます。英雄として尊敬されるこの者達は剣でも弓でも強く、一度得られた"
-#~ "彼らの技能は鍛錬が不足しているときでさえも失われることはありません。"
-
-#~ msgid ""
-#~ "The nobility of the elves are possessed of merit to match their standing "
-#~ "in society. Elvish Lords are the wisest and strongest of their people, "
-#~ "and are fearsome in their command of magic."
-#~ msgstr ""
-#~ "エルフの貴族（Elvish Lord）\n"
-#~ "\n"
-#~ "エルフ族の高貴さは、彼らの社会的な立場に適合した功績により手に入ります。エ"
-#~ "ルフの貴族はエルフの中で最も賢く、最も強く、そして魔法の扱いに恐ろしく優れ"
-#~ "ています。"
-
-#~ msgid ""
-#~ "Elves are wondrously keen-sighted, a gift which contributes to their "
-#~ "mastery of the bow. An elf practiced at archery can hit targets that a "
-#~ "man couldn’t even see, and can nock a second arrow almost as soon as the "
-#~ "first is let fly. Realizing this prodigious skill does come with one "
-#~ "cost, that being a lack of practice with the sword."
-#~ msgstr ""
-#~ "エルフの射撃手（Elvish Marksman）\n"
-#~ "\n"
-#~ "エルフは驚くほどの視力を持っており、その視力が弓の技術の向上に貢献していま"
-#~ "す。弓術を身につけたエルフは人間では見えないほど遠くのターゲットに矢を命中"
-#~ "させ、最初の矢が飛んだ瞬間に次の矢をつがえます。このような恐るべき技術を持"
-#~ "つ代わりに、剣の技術が欠けてしまっています。"
-
-#~ msgid ""
-#~ "The longevity and natural intelligence of elves make them apt for "
-#~ "military matters, enough even to counter their general distaste for war. "
-#~ "Elves remember things much more clearly than humankind, and can often "
-#~ "intuit what others can only be trained to do. Certainly, on those rare "
-#~ "occasions when an elf sets his mind to war, the strategy that results is "
-#~ "often the work of a master."
-#~ msgstr ""
-#~ "エルフの元帥（Elvish Marshal）\n"
-#~ "\n"
-#~ "長寿と生まれながらの知性をもつエルフは、軍隊にありがちな慣習を持っていませ"
-#~ "ん。エルフ族は一般的にそういったものに嫌悪感を持つからです。エルフは人間よ"
-#~ "りもずっとはっきりと物事を記憶しており、また、他の者達にどのような訓練を行"
-#~ "えばよいかをしばしば直感で知ることができます。エルフが戦争に心を向けるとい"
-#~ "う稀有な機会において生み出される戦略は、時折、偉大な芸術家の作品のようにも"
-#~ "感じられます。"
-
-#~ msgid ""
-#~ "Though a man might spend years in the forest, he will never shake the "
-#~ "feeling that he is a guest in a realm of which he is not truly a part. "
-#~ "With elves, this is quite reversed. Any elf that studies the lore of the "
-#~ "woods rapidly becomes a master of them. This, combined with a "
-#~ "considerable skill at archery and swordsmanship, is very useful in "
-#~ "warfare."
-#~ msgstr ""
-#~ "エルフのレンジャー（Elvish Ranger）\n"
-#~ "\n"
-#~ "人間が森の中で何年も過ごしたとしても、よそから来た客人であるという気分をふ"
-#~ "るい落とせないでしょう。エルフであればこれは全く異なります。木々の知識を学"
-#~ "んだ全てのエルフは速やかにそれらの達人となり、弓術と剣術の目ざましい技能と"
-#~ "組み合わされた時には、その結果は戦争での力強い道具となります。"
-
-#~ msgid ""
-#~ "The master horsemen of the elves are able to move through forests at a "
-#~ "speed which would be suicidal for any human. Awe of the rider is quite "
-#~ "justified — but questions have also been raised about the stock of the "
-#~ "horses, for the feats they perform seem almost supernatural.\n"
-#~ "\n"
-#~ "This combination of incredible mobility and potent combat strength is one "
-#~ "of the greatest assets the elves possess in warfare."
-#~ msgstr ""
-#~ "習熟したエルフの騎兵（Elvish Rider）は、人間にとっては自殺的ともいえる速度"
-#~ "で森の中を移動することができます。これは確かに乗り手への畏れを人々に植えつ"
-#~ "けますが、彼らがなす芸当はほとんど超自然的に見えるため、馬の血統についての"
-#~ "疑問もまた浮かび上がります。\n"
-#~ "\n"
-#~ "この信じられないほどの機動力と強い戦闘能力の組み合わせは、戦争におけるエル"
-#~ "フが所有する偉大な資産の一つです。"
-
-#~ msgid ""
-#~ "The horsemen of the wood elves have some skill with bow and sword, but "
-#~ "their true skill lies in their horsemanship. Even other elves are "
-#~ "impressed by their uncanny speed in the woods, and their ability to dart "
-#~ "through the thick of the forest with nary a scratch. They may be the only "
-#~ "cavalry in existence that fares better in the woods than on open ground."
-#~ msgstr ""
-#~ "エルフの斥候（Elvish Scout）\n"
-#~ "\n"
-#~ "森エルフの騎兵は弓と剣の技能をいくらか持っていますが、彼らの真の技能は馬術"
-#~ "にあります。他のエルフ達でさえも、彼らの森の中でのものすごい速度や、太い"
-#~ "木々の間をかすりもせず突進する能力に感動させられています。おそらく彼らは、"
-#~ "開かれた大地より森の中でうまくやっていける唯一存在する騎兵隊でしょう。"
-
-#~ msgid ""
-#~ "There was a legend of an elf who stopped an arrow by shooting it out of "
-#~ "the air with one of his own. It is a testament to the skill of the elves "
-#~ "that such a story could be taken seriously. The sharpshooters of the "
-#~ "elves have, quite simply, mastered the art of archery."
-#~ msgstr ""
-#~ "エルフの狙撃手（Elvish Sharpshooter）\n"
-#~ "\n"
-#~ "自分の矢を打って空中で命中させることで矢を止めたエルフの伝説がありました。"
-#~ "そのような物語が真剣に受け取られるのも、エルフの技能の証拠です。エルフの狙"
-#~ "撃手は、極めて単純に、弓矢の術に熟達しています。"
