--- a/po/wesnoth-utbs/ja.po
+++ b/po/wesnoth-utbs/ja.po
@@ -1,13 +1,14 @@
 # Translators:
-# RatArmy <broadbarredfirefish@gmail.com>, 2018
 # tamanegi, 2018
+# RatArmy <broadbarredfirefish@gmail.com>, 2018
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: tamanegi, 2018\n"
+"PO-Revision-Date: 2018-05-06 10:25+0000\n"
+"Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2018\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -44,7 +45,7 @@ msgstr ""
 #. [campaign]: id=Under_the_Burning_Suns
 #: data/campaigns/Under_the_Burning_Suns/_main.cfg:22
 msgid "(Expert level, 10 scenarios.)"
-msgstr "（上級者レベル、10 シナリオ）"
+msgstr "（達人レベル、10 シナリオ）"
 
 #. [campaign]: id=Under_the_Burning_Suns
 #: data/campaigns/Under_the_Burning_Suns/_main.cfg:26
